# fastridge

./: .gitignore  CLAUDE.md  README.md  experiments.py  fastridge.py  increasing_p.ipynb  loocv_risk.ipynb  plotting.py  problems.py  pyrightconfig.json  pytest-package.ini  pytest.ini  requirements.txt  setup.cfg  setup.py  sllab.md  sparse_designs.ipynb
.github/workflows/: ci.yml  release.yml
Analysis/Pending/: ridge.ipynb
Analysis/Real_Data/: Real data.ipynb  RealDataFunction.py
Analysis/Simulated_data/: experiments.py  increasing_p.ipynb  plotting.py  problems.py  sparse_designs.ipynb
Analysis/Unimodality_Convexity/: LOOCV Risk Function vs Bayesian Ridge posterior.ipynb  RidgeTrueRisk.py  plotting.py
datasets/: .gitignore  eye.csv  yacht.csv
docs/superpowers/analysis/: 2026-04-28-y-normalization-order-bug.md
docs/superpowers/issues/: 2026-04-11-student-dataset-structure.md  2026-04-12-real-data-p-discrepancies.md  2026-04-13-real-data-result-discrepancies.md  (+1 more)
experiments/: ISSUES_NEURIPS2023.md  NEURIPS2023_ISSUES.md  data.py  double_asymptotic_trends.ipynb  experiments.py  journal2026.py  neurips2023.py  neurips2023_real_data.ipynb  plotting.py  plotting2d.py  problems.py  real_data.ipynb  real_data_neurips2023.ipynb  real_data_predictive.ipynb  real_data_timing.ipynb  sparse_designs.ipynb  timing_analysis.ipynb  tutorial.ipynb  unimodality_convexity.ipynb  util.py
output/: paper2023_table2.csv
results/: .gitignore
tests/: test_experiments.py  test_fastridge.py  test_journal2026.py  test_neurips2023.py  test_problems.py  test_util.py
(+67 files in other folders)
